--- a/courses/templates/courses/course/course_update.html
+++ b/courses/templates/courses/course/course_update.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block title %}
-    Section Update
+    Update Course
 {% endblock title %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static 'courses/css/section_update.css' %}">
+    <link rel="stylesheet" href="{% static 'courses/css/course/course_update.css' %}">
 {% endblock css_files %}
 
 {% block content %}
