--- a/discussion_boards/templates/discussion_boards/comment/update_comment.html
+++ b/discussion_boards/templates/discussion_boards/comment/update_comment.html
@@ -2,11 +2,11 @@
 {% load static %}
 
 {% block title %}
-
+        Update Comment
 {% endblock title %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static 'courses/css/course_update.css' %}">
+    <link rel="stylesheet" href="{% static 'discussion_boards/css/comment/update_comment.css' %}">
 {% endblock css_files %}
 
 {% block content %}
