--- a/catalogue/templates/catalogue/course_list.html
+++ b/catalogue/templates/catalogue/course_list.html
@@ -9,15 +9,30 @@
     <link rel="stylesheet" href="{% static 'catalogue/css/course_list.css' %}">    
 {% endblock css_files %}
 
-{% block content %} 
-    <h2><a href="{% url 'courses:course-create' %}">Create new course</a></h2>
-    {% for course in courses %}
+{% block content %}
+    <div class="classified-links">
+        <h2><a href="{% url 'courses:course-create' %}">Create new course</a></h2>
+        <h2><a href="{% url 'catalogue:tag-list'%}">Tags List</a></h2>
+    </div>
+    <form method="get" class="filter-form">
+        {{ filter.form.as_p }}
+        <button type="submit">Search</button>
+        <button><a href="{% url 'catalogue:course-list' %}">Clear</a></button>
+    </form>
+    {% for course in filter.qs %}
         <div class="course-list-item">
             <h3>{{course.name}}: version {{ course.version }}</h3>
+            <ul class="tag-list">
+                {% for tag in course.tags.all %}
+                    <li>{{ tag.name }}</li>
+                {% endfor %}
+            </ul>
             <h4 class="course-nav-button"><a href="{% url 'courses:course-detail' course=course.slug %}">Course page</a></h4>
-            <h4 class="course-nav-button"><a href="{% url 'courses:course-update' course=course.slug %}">Edit Course</a></h4>
-            <h4 class="course-nav-button"><a href="{% url 'courses:course-delete' course=course.slug %}">Delete Course</a></h4>
+            <h4 class="course-nav-button"><a href="{% url 'courses:course-update' slug=course.slug %}">Edit Course</a></h4>
+            <h4 class="course-nav-button"><a href="{% url 'courses:course-delete' slug=course.slug %}">Delete Course</a></h4>
         </div>
+    {% empty %}
+        <p>No courses found</p>
     {% endfor %}
         
 {% endblock content %}
