--- a/courses/templates/courses/section/section_delete.html
+++ b/courses/templates/courses/section/section_delete.html
@@ -2,17 +2,18 @@
 {% load static %}
 
 {% block title %}
-        Section Create
+        Delete Section
 {% endblock title %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static 'courses/css/section_create.css' %}">
+    <link rel="stylesheet" href="{% static 'courses/css/section/section_delete.css' %}">
 {% endblock css_files %}
 
 {% block content %}
     <form method="post">
         {% csrf_token %}
+        <p>Are you sure you want to delete "{{ object }}"</p>
         {{ form.as_p }}
-        <button type="submit">Create</button>
+        <button type="submit">Confirm</button>
     </form>
 {% endblock content %}
