--- a/courses/templates/courses/section/section_update.html
+++ b/courses/templates/courses/section/section_update.html
@@ -2,18 +2,17 @@
 {% load static %}
 
 {% block title %}
-        Course Delete
+    Section Update
 {% endblock title %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static 'courses/css/course_delete.css' %}">
+    <link rel="stylesheet" href="{% static 'courses/css/section/section_update.css' %}">
 {% endblock css_files %}
 
 {% block content %}
     <form method="post">
         {% csrf_token %}
-        <p>Are you sure you want to delete "{{ object }}"</p>
         {{ form.as_p }}
-        <button type="submit">Confirm</button>
+        <button type="submit">Update</button>
     </form>
 {% endblock content %}
