--- a/discussion_boards/templates/discussion_boards/board/create_board.html
+++ b/discussion_boards/templates/discussion_boards/board/create_board.html
@@ -2,17 +2,18 @@
 {% load static %}
 
 {% block title %}
-        Update Lesson
+        Create New Board
 {% endblock title %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static 'courses/css/lesson_update.css' %}">
+    <link rel="stylesheet" href="{% static 'discussion_boards/css/board/create_board.css' %}">
 {% endblock css_files %}
 
 {% block content %}
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Update</button>
+        <button type="submit">Create Board</button>
     </form>
 {% endblock content %}
+
